--- a/about-author.html
+++ b/about-author.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Контакти</title>
+    <title>Про автора</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,14 +66,12 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/contact-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>Contact Me</h1>
-                        <hr class="small">
-                        <span class="subheading">Have questions? I have answers (maybe).</span>
+                        <h1>Про автора</h1>
                     </div>
                 </div>
             </div>
@@ -84,15 +82,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Want to get in touch with me? Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
-
-                <div class="row control-group">
-                        <p>Name: Уляна Родчин</p>
-                </div>
-                <div class="row control-group">
-                        <p>Email Address: urodchyn@gmail.com</p>
-                </div>
-
+                <p>Роботу виконала Родчин Уляна</p>
             </div>
         </div>
     </div>
