Copyright update :) urodchyn.github.io

--- a/about-author.html
+++ b/about-author.html
@@ -120,7 +120,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; urodchyn.github.io 2016</p>
                 </div>
             </div>
         </div>
