--- a/pages/discussion.html
+++ b/pages/discussion.html
@@ -158,7 +158,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; urodchyn.github.io 2016</p>
                 </div>
             </div>
         </div>
