--- a/about-author.html
+++ b/about-author.html
@@ -40,7 +40,7 @@
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
-                    Menu <i class="fa fa-bars"></i>
+                    навігація <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">Домашня сторінка</a>
             </div>
