Menu => навігація update :) urodchyn.github.io

--- a/about-author.html
+++ b/about-author.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     навігація <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Домашня сторінка</a>
+                <a class="navbar-brand" href="/">Домашня сторінка</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
