--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="site-heading">
                         <h1>Інтерактивні методи навчання</h1>
                         <hr class="small">
-                        <span class="subheading">Сайт приклад web-сторінки</span>
+                        <span class="subheading">Сайт-приклад web-сторінки</span>
                     </div>
                 </div>
             </div>
