--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                         <p>Name: Уляна Родчин</p>
                 </div>
                 <div class="row control-group">
-                        <p>Email Address: <а href=mailto:urodchyn@gmail.com>urodchyn@gmail.com</а></p>
+                        <p>Email Address: <а href="mailto:urodchyn@gmail.com">urodchyn@gmail.com</а></p>
                 </div>
 
             </div>
